feat: 第19頁換圖；第30頁缺點用兩圖+第12頁卡片版；第31/33頁改卡片大字版；第34頁放交易所圖
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 title: "太少了？比特幣空投 (2010年)",
                 content: (
                     <div className="flex items-center justify-center h-full min-h-0 p-4">
-                        <img src="https://i.urusai.cc/mBriO.png" alt="Free Bitcoins 網站 (2010)" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        <img src="https://i.urusai.cc/YWgvq.png" alt="Free Bitcoins 網站 (2010)" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
@@ -739,21 +739,23 @@
                 tag: "優缺點分析",
                 title: "缺點",
                 content: (
-                    <div className="flex flex-col h-full justify-center gap-4 max-w-3xl mx-auto">
-                        <ul className="space-y-3 text-lg md:text-xl text-slate-700">
-                            <li className="flex items-start gap-3 p-4 rounded-xl bg-slate-50 border border-slate-200">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-slate-600 text-white flex items-center justify-center">
-                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" /></svg>
-                                </span>
-                                <span>沒有實名登記，政府監管困難。</span>
-                            </li>
-                            <li className="flex items-start gap-3 p-4 rounded-xl bg-slate-50 border border-slate-200">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-slate-600 text-white flex items-center justify-center">
-                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 7l5 5m0 0l-5 5m5-5H6" /><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 12h.01" /></svg>
-                                </span>
-                                <span>資金流向半透明，轉帳一去不復返。</span>
-                            </li>
-                        </ul>
+                    <div className="flex flex-col items-center justify-center h-full py-6">
+                        <div className="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8 w-full max-w-4xl">
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-slate-300 transition-all flex flex-col items-center text-center">
+                                <div className="w-full max-w-[200px] md:max-w-[240px] aspect-square rounded-2xl border border-slate-200 bg-slate-50 overflow-hidden flex items-center justify-center mb-4">
+                                    <img src="https://i.urusai.cc/zipfY.png" alt="沒有實名登記" className="w-full h-full object-contain p-2" />
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">監管困難</h3>
+                                <p className="text-slate-600 text-xl md:text-2xl">沒有實名登記，政府監管困難。</p>
+                            </div>
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-slate-300 transition-all flex flex-col items-center text-center">
+                                <div className="w-full max-w-[200px] md:max-w-[240px] aspect-square rounded-2xl border border-slate-200 bg-slate-50 overflow-hidden flex items-center justify-center mb-4">
+                                    <img src="https://i.urusai.cc/uh3eW.png" alt="資金流向" className="w-full h-full object-contain p-2" />
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">轉帳不可逆</h3>
+                                <p className="text-slate-600 text-xl md:text-2xl">資金流向半透明，轉帳一去不復返。</p>
+                            </div>
+                        </div>
                     </div>
                 )
             },
@@ -763,21 +765,30 @@
                 tag: "優缺點分析",
                 title: "優點",
                 content: (
-                    <div className="flex flex-col h-full justify-center gap-4 max-w-4xl mx-auto">
-                        <ul className="space-y-3 text-lg md:text-xl text-slate-700">
-                            <li className="flex items-start gap-3 p-3 rounded-xl bg-emerald-50 border border-emerald-100">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-emerald-500 text-white font-bold flex items-center justify-center">1</span>
-                                <span>轉帳像傳 LINE 一樣簡單！網路不分網內外，區塊鏈不分行內外。</span>
-                            </li>
-                            <li className="flex items-start gap-3 p-3 rounded-xl bg-emerald-50 border border-emerald-100">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-emerald-500 text-white font-bold flex items-center justify-center">2</span>
-                                <span>網路處理資訊（info），區塊鏈處理資產（asset）。</span>
-                            </li>
-                            <li className="flex items-start gap-3 p-3 rounded-xl bg-emerald-50 border border-emerald-100">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-emerald-500 text-white font-bold flex items-center justify-center">3</span>
-                                <span>區塊鏈是第二次網路革命，金融首當其衝。</span>
-                            </li>
-                        </ul>
+                    <div className="flex flex-col items-center justify-center h-full py-6">
+                        <div className="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8 w-full max-w-5xl">
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-emerald-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-emerald-50 flex items-center justify-center mb-4">
+                                    <span className="text-2xl md:text-3xl font-bold text-emerald-600">1</span>
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">像傳 LINE 一樣簡單</h3>
+                                <p className="text-slate-600 text-xl md:text-2xl">轉帳像傳 LINE 一樣簡單！網路不分網內外，區塊鏈不分行內外。</p>
+                            </div>
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-emerald-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-emerald-50 flex items-center justify-center mb-4">
+                                    <span className="text-2xl md:text-3xl font-bold text-emerald-600">2</span>
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">資訊 vs 資產</h3>
+                                <p className="text-slate-600 text-xl md:text-2xl">網路處理資訊（info），區塊鏈處理資產（asset）。</p>
+                            </div>
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-emerald-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-emerald-50 flex items-center justify-center mb-4">
+                                    <span className="text-2xl md:text-3xl font-bold text-emerald-600">3</span>
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">第二次網路革命</h3>
+                                <p className="text-slate-600 text-xl md:text-2xl">區塊鏈是第二次網路革命，金融首當其衝。</p>
+                            </div>
+                        </div>
                     </div>
                 )
             },
@@ -793,18 +804,24 @@
                 tag: "加密貨幣哪裡來?",
                 title: "如何取得加密貨幣",
                 content: (
-                    <div className="flex flex-col h-full justify-center gap-6 max-w-3xl mx-auto">
-                        <p className="text-lg text-slate-600 mb-2">兩種主要方式：</p>
-                        <ul className="space-y-4 text-lg md:text-xl text-slate-700">
-                            <li className="flex items-start gap-3 p-4 rounded-xl bg-slate-50 border border-slate-200">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">1</span>
-                                <span><strong>交易所或面交買幣</strong> — 用法幣或當面交易換取加密貨幣。</span>
-                            </li>
-                            <li className="flex items-start gap-3 p-4 rounded-xl bg-slate-50 border border-slate-200">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">2</span>
-                                <span><strong>成為礦工挖礦</strong> — 提供算力維護區塊鏈，獲得區塊獎勵。</span>
-                            </li>
-                        </ul>
+                    <div className="flex flex-col items-center justify-center h-full py-6">
+                        <p className="text-xl md:text-2xl text-slate-600 mb-6">兩種主要方式</p>
+                        <div className="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8 w-full max-w-4xl">
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
+                                    <span className="text-2xl md:text-3xl font-bold text-amber-600">1</span>
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">交易所或面交買幣</h3>
+                                <p className="text-slate-600 text-xl md:text-2xl">用法幣或當面交易換取加密貨幣。</p>
+                            </div>
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
+                                    <span className="text-2xl md:text-3xl font-bold text-amber-600">2</span>
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">成為礦工挖礦</h3>
+                                <p className="text-slate-600 text-xl md:text-2xl">提供算力維護區塊鏈，獲得區塊獎勵。</p>
+                            </div>
+                        </div>
                     </div>
                 )
             },
@@ -814,23 +831,9 @@
                 tag: "加密貨幣哪裡來?",
                 title: "交易所",
                 content: (
-                    <div className="flex flex-col h-full justify-center gap-4 max-w-4xl mx-auto">
-                        <div className="flex flex-wrap items-center justify-center gap-2 md:gap-4 text-base md:text-lg text-slate-700">
-                            <span className="px-3 py-2 rounded-lg bg-blue-50 border border-blue-100 font-medium">銀行帳戶</span>
-                            <span className="text-slate-400">→</span>
-                            <span className="px-3 py-2 rounded-lg bg-slate-100 border border-slate-200">新台幣轉帳</span>
-                            <span className="text-slate-400">→</span>
-                            <span className="px-3 py-2 rounded-lg bg-amber-50 border border-amber-200 font-medium">交易所</span>
-                        </div>
-                        <p className="text-center text-slate-600">交易所可將加密貨幣：</p>
-                        <div className="flex flex-col sm:flex-row items-center justify-center gap-4">
-                            <div className="px-5 py-4 rounded-xl bg-slate-50 border border-slate-200 text-center">
-                                <span className="font-medium text-slate-800">提領到個人錢包</span>
-                            </div>
-                            <span className="text-slate-400 font-medium">或</span>
-                            <div className="px-5 py-4 rounded-xl bg-slate-50 border border-slate-200 text-center">
-                                <span className="font-medium text-slate-800">轉帳到國外交易所</span>
-                            </div>
+                    <div className="flex flex-col items-center justify-center h-full min-h-0 p-4">
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://l.urusai.cc/QqBdt.png" alt="交易所：銀行轉帳入金、提領錢包或轉至國外交易所" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                     </div>
                 )
