--- a/index.html
+++ b/index.html
@@ -841,6 +841,82 @@
             {
                 id: 35,
                 layout: 'detail',
+                tag: "加密貨幣哪裡來?",
+                title: "交易所網頁、門市",
+                content: (
+                    <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/PLACEHOLDER_EXCHANGE_WEB.png" alt="交易所網頁截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/PLACEHOLDER_EXCHANGE_STORE.png" alt="交易所門市截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 36,
+                layout: 'detail',
+                tag: "加密貨幣哪裡來?",
+                title: "礦工",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://l.urusai.cc/HTJOf.png" alt="礦工截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 37,
+                layout: 'section',
+                title: "誰要用加密貨幣?",
+                subtitle: "不同地區、不同需求"
+            },
+            {
+                id: 38,
+                layout: 'detail',
+                tag: "誰要用加密貨幣?",
+                title: "阿根廷、土耳其",
+                content: (
+                    <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/PLACEHOLDER_ARS_TWD.png" alt="阿根廷披索兌新台幣匯率截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/PLACEHOLDER_TRY_TWD.png" alt="土耳其里拉兌新台幣匯率截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 39,
+                layout: 'detail',
+                tag: "誰要用加密貨幣?",
+                title: "不同人眼中的比特幣",
+                content: (
+                    <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/PLACEHOLDER_BTC_TWD.png" alt="比特幣兌新台幣截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/PLACEHOLDER_BTC_ARS.png" alt="比特幣兌阿根廷披索截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 40,
+                layout: 'detail',
+                tag: "誰要用加密貨幣?",
+                title: "阿根廷",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://l.urusai.cc/kATlq.png" alt="阿根廷" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 41,
+                layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
                 content: (
@@ -871,7 +947,7 @@
                 )
             },
             {
-                id: 36,
+                id: 42,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -896,7 +972,7 @@
                 )
             },
             {
-                id: 37,
+                id: 43,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -923,7 +999,7 @@
                 )
             },
             {
-                id: 38,
+                id: 44,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -958,7 +1034,7 @@
                 )
             },
             {
-                id: 39,
+                id: 45,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
