--- a/index.html
+++ b/index.html
@@ -680,28 +680,31 @@
                 tag: "加密貨幣的創新",
                 title: "差異在哪？",
                 content: (
-                    <div className="flex flex-col h-full justify-center gap-4 max-w-4xl mx-auto">
-                        <p className="text-xl md:text-2xl text-amber-700 font-bold border-l-4 border-amber-500 pl-4 mb-2">加密貨幣是數位現金</p>
-                        <ul className="space-y-3 text-lg md:text-xl text-slate-700">
-                            <li className="flex items-start gap-3 p-3 rounded-xl bg-amber-50/80 border border-amber-100">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white flex items-center justify-center">
-                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" /></svg>
-                                </span>
-                                <span>數位面交：從錢包到錢包。</span>
-                            </li>
-                            <li className="flex items-start gap-3 p-3 rounded-xl bg-amber-50/80 border border-amber-100">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white flex items-center justify-center">
-                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" /></svg>
-                                </span>
-                                <span>金流沒有經過銀行，而是經過區塊鏈，無法凍結資產。</span>
-                            </li>
-                            <li className="flex items-start gap-3 p-3 rounded-xl bg-amber-50/80 border border-amber-100">
-                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white flex items-center justify-center">
-                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-1 4h6" /></svg>
-                                </span>
-                                <span>區塊鏈由礦工營運，而不是銀行跟政府。</span>
-                            </li>
-                        </ul>
+                    <div className="flex flex-col items-center justify-center h-full py-6">
+                        <p className="text-xl md:text-2xl text-amber-700 font-bold mb-6">加密貨幣是數位現金</p>
+                        <div className="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8 w-full max-w-4xl">
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
+                                    <svg className="w-7 h-7 md:w-8 md:h-8 text-amber-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" /></svg>
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">數位面交</h3>
+                                <p className="text-slate-600 text-lg">從錢包到錢包。</p>
+                            </div>
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
+                                    <svg className="w-7 h-7 md:w-8 md:h-8 text-amber-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" /></svg>
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">金流走區塊鏈</h3>
+                                <p className="text-slate-600 text-lg">沒有經過銀行，無法凍結資產。</p>
+                            </div>
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
+                                    <svg className="w-7 h-7 md:w-8 md:h-8 text-amber-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-1 4h6" /></svg>
+                                </div>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">礦工營運</h3>
+                                <p className="text-slate-600 text-lg">區塊鏈由礦工營運，而不是銀行跟政府。</p>
+                            </div>
+                        </div>
                     </div>
                 )
             },
@@ -741,16 +744,16 @@
                 content: (
                     <div className="flex flex-col items-center justify-center h-full py-6">
                         <div className="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8 w-full max-w-4xl">
-                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-slate-300 transition-all flex flex-col items-center text-center">
-                                <div className="w-full max-w-[200px] md:max-w-[240px] aspect-square rounded-2xl border border-slate-200 bg-slate-50 overflow-hidden flex items-center justify-center mb-4">
-                                    <img src="https://i.urusai.cc/zipfY.png" alt="沒有實名登記" className="w-full h-full object-contain p-2" />
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-slate-300 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-slate-100 flex items-center justify-center mb-4">
+                                    <span className="text-2xl md:text-3xl font-bold text-slate-600">1</span>
                                 </div>
                                 <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">監管困難</h3>
                                 <p className="text-slate-600 text-xl md:text-2xl">沒有實名登記，政府監管困難。</p>
                             </div>
-                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-slate-300 transition-all flex flex-col items-center text-center">
-                                <div className="w-full max-w-[200px] md:max-w-[240px] aspect-square rounded-2xl border border-slate-200 bg-slate-50 overflow-hidden flex items-center justify-center mb-4">
-                                    <img src="https://i.urusai.cc/uh3eW.png" alt="資金流向" className="w-full h-full object-contain p-2" />
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-slate-300 hover:shadow-md transition-all flex flex-col items-center text-center">
+                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-slate-100 flex items-center justify-center mb-4">
+                                    <span className="text-2xl md:text-3xl font-bold text-slate-600">2</span>
                                 </div>
                                 <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">轉帳不可逆</h3>
                                 <p className="text-slate-600 text-xl md:text-2xl">資金流向半透明，轉帳一去不復返。</p>
@@ -805,18 +808,17 @@
                 title: "如何取得加密貨幣",
                 content: (
                     <div className="flex flex-col items-center justify-center h-full py-6">
-                        <p className="text-xl md:text-2xl text-slate-600 mb-6">兩種主要方式</p>
                         <div className="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8 w-full max-w-4xl">
                             <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
                                 <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
-                                    <span className="text-2xl md:text-3xl font-bold text-amber-600">1</span>
+                                    <svg className="w-7 h-7 md:w-8 md:h-8 text-amber-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-1 4h6"/></svg>
                                 </div>
                                 <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">交易所或面交買幣</h3>
                                 <p className="text-slate-600 text-xl md:text-2xl">用法幣或當面交易換取加密貨幣。</p>
                             </div>
                             <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
                                 <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
-                                    <span className="text-2xl md:text-3xl font-bold text-amber-600">2</span>
+                                    <svg className="w-7 h-7 md:w-8 md:h-8 text-amber-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><rect width="16" height="16" x="4" y="4" rx="2" ry="2"/><rect width="6" height="6" x="9" y="9" rx="1"/><path d="M15 2v2"/><path d="M15 20v2"/><path d="M2 15h2"/><path d="M2 9h2"/><path d="M20 15h2"/><path d="M20 9h2"/><path d="M9 2v2"/><path d="M9 20v2"/></svg>
                                 </div>
                                 <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">成為礦工挖礦</h3>
                                 <p className="text-slate-600 text-xl md:text-2xl">提供算力維護區塊鏈，獲得區塊獎勵。</p>
