fix: 第35、38、39頁換成實際截圖網址
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -848,10 +848,10 @@
                 content: (
                     <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/PLACEHOLDER_EXCHANGE_WEB.png" alt="交易所網頁截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/rUcFq.png" alt="交易所網頁截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/PLACEHOLDER_EXCHANGE_STORE.png" alt="交易所門市截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://l.urusai.cc/mH7VW.png" alt="交易所門市截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                     </div>
                 )
@@ -881,10 +881,10 @@
                 content: (
                     <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/PLACEHOLDER_ARS_TWD.png" alt="阿根廷披索兌新台幣匯率截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/a2wzb.png" alt="阿根廷披索兌新台幣匯率截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/PLACEHOLDER_TRY_TWD.png" alt="土耳其里拉兌新台幣匯率截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/pqNRN.png" alt="土耳其里拉兌新台幣匯率截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                     </div>
                 )
@@ -897,10 +897,10 @@
                 content: (
                     <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/PLACEHOLDER_BTC_TWD.png" alt="比特幣兌新台幣截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/SG9Xu.png" alt="比特幣兌新台幣截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/PLACEHOLDER_BTC_ARS.png" alt="比特幣兌阿根廷披索截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/IFZMH.png" alt="比特幣兌阿根廷披索截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                     </div>
                 )
