--- a/index.html
+++ b/index.html
@@ -919,6 +919,39 @@
             {
                 id: 41,
                 layout: 'detail',
+                tag: "誰要用加密貨幣?",
+                title: "AI機器人",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full py-6 px-4">
+                        <p className="text-xl md:text-2xl text-slate-600 font-medium mb-6">AI遇到付費牆就被擋住了</p>
+                        <div className="flex flex-col md:flex-row items-stretch justify-center gap-0 w-full max-w-4xl">
+                            <div className="flex-1 flex flex-col items-center justify-center p-6 md:p-8 rounded-2xl md:rounded-r-none rounded-b-2xl md:rounded-b-2xl bg-slate-100 border-2 border-slate-200">
+                                <span className="text-2xl md:text-3xl font-bold text-slate-800">AI</span>
+                            </div>
+                            <div className="flex-shrink-0 w-full md:w-24 flex flex-col items-center justify-center p-4 bg-amber-200 border-y-2 md:border-y-0 md:border-x-4 border-slate-400">
+                                <span className="text-lg md:text-xl font-bold text-slate-800">付費牆</span>
+                            </div>
+                            <div className="flex-1 flex flex-col items-center justify-center p-6 md:p-8 rounded-2xl md:rounded-l-none rounded-t-2xl md:rounded-t-2xl bg-emerald-50 border-2 border-emerald-200">
+                                <span className="text-xl md:text-2xl font-bold text-slate-800">有價值的內容</span>
+                            </div>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 42,
+                layout: 'detail',
+                tag: "誰要用加密貨幣?",
+                title: "機器人按爬取付費",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/ssRBO.png" alt="機器人按爬取付費" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 43,
+                layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
                 content: (
@@ -949,7 +982,7 @@
                 )
             },
             {
-                id: 42,
+                id: 44,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -974,7 +1007,7 @@
                 )
             },
             {
-                id: 43,
+                id: 45,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -1001,7 +1034,7 @@
                 )
             },
             {
-                id: 44,
+                id: 46,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -1036,7 +1069,7 @@
                 )
             },
             {
-                id: 45,
+                id: 47,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
