fix: 第39頁換兩張圖；第41頁改為單圖Hgk67
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -897,10 +897,10 @@
                 content: (
                     <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/SG9Xu.png" alt="比特幣兌新台幣截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/AJtnI.png" alt="比特幣兌新台幣截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/IFZMH.png" alt="比特幣兌阿根廷披索截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/YITb7.png" alt="比特幣兌阿根廷披索截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                     </div>
                 )
@@ -922,19 +922,8 @@
                 tag: "誰要用加密貨幣?",
                 title: "AI機器人",
                 content: (
-                    <div className="flex flex-col items-center justify-center h-full py-6 px-4">
-                        <p className="text-xl md:text-2xl text-slate-600 font-medium mb-6">AI遇到付費牆就被擋住了</p>
-                        <div className="flex flex-col md:flex-row items-stretch justify-center gap-0 w-full max-w-4xl">
-                            <div className="flex-1 flex flex-col items-center justify-center p-6 md:p-8 rounded-2xl md:rounded-r-none rounded-b-2xl md:rounded-b-2xl bg-slate-100 border-2 border-slate-200">
-                                <span className="text-2xl md:text-3xl font-bold text-slate-800">AI</span>
-                            </div>
-                            <div className="flex-shrink-0 w-full md:w-24 flex flex-col items-center justify-center p-4 bg-amber-200 border-y-2 md:border-y-0 md:border-x-4 border-slate-400">
-                                <span className="text-lg md:text-xl font-bold text-slate-800">付費牆</span>
-                            </div>
-                            <div className="flex-1 flex flex-col items-center justify-center p-6 md:p-8 rounded-2xl md:rounded-l-none rounded-t-2xl md:rounded-t-2xl bg-emerald-50 border-2 border-emerald-200">
-                                <span className="text-xl md:text-2xl font-bold text-slate-800">有價值的內容</span>
-                            </div>
-                        </div>
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/Hgk67.png" alt="AI機器人" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
