feat: 第42頁改為段落「鏈上的金融應用」；新增美元穩定幣、USDC儲備、價差套利兩圖、套利一圖四頁
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -929,6 +929,12 @@
             },
             {
                 id: 42,
+                layout: 'section',
+                title: "鏈上的金融應用",
+                subtitle: "穩定幣與鏈上金融"
+            },
+            {
+                id: 43,
                 layout: 'detail',
                 tag: "誰要用加密貨幣?",
                 title: "機器人按爬取付費",
@@ -939,7 +945,59 @@
                 )
             },
             {
-                id: 43,
+                id: 44,
+                layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "美元穩定幣",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full min-h-0 p-4">
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/0TEyp.png" alt="美元穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                        <p className="text-center text-slate-600 text-lg md:text-xl font-medium mt-4 flex-shrink-0">美元放銀行，穩定幣放鏈上，一比一。</p>
+                    </div>
+                )
+            },
+            {
+                id: 45,
+                layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "USDC的美元儲備",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/6e72U.png" alt="USDC的美元儲備" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 46,
+                layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "穩定幣、美元價差套利",
+                content: (
+                    <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/b5IoO.png" alt="穩定幣美元價差套利 1" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/pmH4u.png" alt="穩定幣美元價差套利 2" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 47,
+                layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "穩定幣、美元套利",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/PACVj.png" alt="穩定幣、美元套利" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 48,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -971,7 +1029,7 @@
                 )
             },
             {
-                id: 44,
+                id: 49,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -996,7 +1054,7 @@
                 )
             },
             {
-                id: 45,
+                id: 50,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -1023,7 +1081,7 @@
                 )
             },
             {
-                id: 46,
+                id: 51,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -1058,7 +1116,7 @@
                 )
             },
             {
-                id: 47,
+                id: 52,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
