--- a/index.html
+++ b/index.html
@@ -929,12 +929,6 @@
             },
             {
                 id: 42,
-                layout: 'section',
-                title: "鏈上的金融應用",
-                subtitle: "穩定幣與鏈上金融"
-            },
-            {
-                id: 43,
                 layout: 'detail',
                 tag: "誰要用加密貨幣?",
                 title: "機器人按爬取付費",
@@ -943,6 +937,12 @@
                         <img src="https://i.urusai.cc/ssRBO.png" alt="機器人按爬取付費" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
+            },
+            {
+                id: 43,
+                layout: 'section',
+                title: "鏈上的金融應用",
+                subtitle: "穩定幣與鏈上金融"
             },
             {
                 id: 44,
@@ -999,6 +999,53 @@
             {
                 id: 48,
                 layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "交易所放貸",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/VxACl.png" alt="交易所放貸" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 49,
+                layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "去中心化金融",
+                content: (
+                    <div className="flex flex-col h-full justify-center gap-6 max-w-2xl mx-auto">
+                        <ol className="space-y-4 text-xl md:text-2xl text-slate-700 list-decimal list-inside">
+                            <li><strong>Aave</strong>：沒有銀行的儲蓄</li>
+                            <li><strong>PoolTogether</strong>：不會輸的樂透彩</li>
+                        </ol>
+                    </div>
+                )
+            },
+            {
+                id: 50,
+                layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "沒有銀行的儲蓄",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/aEuLs.png" alt="沒有銀行的儲蓄" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 51,
+                layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "不會輸的樂透彩",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/eWAwk.png" alt="不會輸的樂透彩" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 52,
+                layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
                 content: (
@@ -1029,7 +1076,7 @@
                 )
             },
             {
-                id: 49,
+                id: 53,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -1054,7 +1101,7 @@
                 )
             },
             {
-                id: 50,
+                id: 54,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -1081,7 +1128,7 @@
                 )
             },
             {
-                id: 51,
+                id: 55,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -1116,7 +1163,7 @@
                 )
             },
             {
-                id: 52,
+                id: 56,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
