feat: 感謝聆聽前新增7頁（加密貨幣VISA卡、VISA卡出金、黃金穩定幣、台銀黃金存摺、鏈上黃金存摺、持有代幣更輕鬆、鏈上華爾街）
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -1256,6 +1256,83 @@
             },
             {
                 id: 62,
+                layout: 'detail',
+                tag: "常用工具",
+                title: "加密貨幣VISA卡",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/YYKji.png" alt="加密貨幣VISA卡" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 63,
+                layout: 'detail',
+                tag: "常用工具",
+                title: "直接用VISA卡出金",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/vWGX3.png" alt="直接用VISA卡出金" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 64,
+                layout: 'detail',
+                tag: "資產代幣化",
+                title: "發行黃金穩定幣",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/lncZT.png" alt="發行黃金穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 65,
+                layout: 'detail',
+                tag: "資產代幣化",
+                title: "台灣銀行的黃金存摺",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/B38mf.png" alt="台灣銀行的黃金存摺" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 66,
+                layout: 'detail',
+                tag: "資產代幣化",
+                title: "鏈上黃金存摺",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/mxW1R.png" alt="鏈上黃金存摺" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 67,
+                layout: 'detail',
+                tag: "資產代幣化",
+                title: "持有代幣更輕鬆",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/2AD6h.png" alt="持有代幣更輕鬆" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 68,
+                layout: 'detail',
+                tag: "資產代幣化",
+                title: "鏈上華爾街",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/k5WXE.png" alt="鏈上華爾街" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 69,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
